# tamira-fin-ui

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-personal.yml
.streamlit/: config.toml
docs/: deployment.md
src/tamira_fin_ui/: __init__.py  bluechips.py  dashboard_app.py  lstm_main_code.py  portfolio.py
